Added the service and restarant -mock servioes ,REST API

--- a/restaurant-server/package.json
+++ b/restaurant-server/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/gau26rav/Restaurant#readme",
   "dependencies": {
+    "body-parser": "^1.17.2",
     "express": "^4.15.3"
   }
 }
