--- a/restaurant-server/package.json
+++ b/restaurant-server/package.json
@@ -23,5 +23,9 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.3"
+  },
+  "devDependencies": {
+    "chai": "^4.0.2",
+    "chai-http": "^3.0.0"
   }
 }
